💄style: change global background color

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 body {
     height: 100vh;
     width: 100vw;
-    background-color: #281978;
+    background-color: #2f1e87;
     position: absolute;
     color: #fff;
     display: flex;
