--- a/src/Page/main.css
+++ b/src/Page/main.css
@@ -4,12 +4,24 @@
 }
 
 .calculator {
-    padding: 1.25rem;
+    padding: 1.5rem;
     border-radius: 0.6rem;
     background-color: #ddcaff;
     box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.2);
 }
 
+.display {
+    display: flex;
+    justify-content: flex-end;
+    margin: 5px 0 15px
+}
+
+.display input {
+    text-align: right;
+    flex: 1;
+    font-size: 1.8rem;
+    padding: 0.3rem;
+}
 
 input {
     width: 3.75rem;
